--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,12 @@
     "module": "commonjs",
     "target": "es5",
     "sourceMap": true,
-    "outDir": "./js"
+    "outDir": "./src/js"
   },
   "exclude": [
     "node_modules"
   ],
-    "include": ["./src/*"]
+    "include": [
+      "./src/src/*"
+    ]
 }
